--- a/README
+++ b/README
@@ -7,13 +7,14 @@ The following options can be specified when starting fbff:
 ==============	================================================
 OPTION		DESCRIPTION
 ==============	================================================
--m x		magnify the screen by repeating pixels
 -z x		zoom the screen using ffmpeg
+-m x		magnify the screen by repeating pixels
 -j x		jump every x video frames; for slow machines
 -f		start full screen
 -v		video only playback
 -a		audio only playback
 -t		use time based seeking; only if the default does't work
+-s		don't rely on video framerate; always synchronize
 -R		adjust the video to the right of the screen
 ==============	================================================
 
@@ -37,4 +38,5 @@ s		synchronize audio/video with A-V equal to avdiff
 -		set avdiff to -arg
 +		set avdiff to +arg
 a		set avdiff to current playback A-V diff
+c		set synchronization steps
 ==============	================================================
