--- a/README
+++ b/README
@@ -15,7 +15,8 @@ OPTION		DESCRIPTION
 -a x		select audio stream; '-' disables audio
 -t		use time based seeking; only if the default does't work
 -s		don't rely on video framerate; always synchronize
--R		adjust the video to the right of the screen
+-r		adjust the video to the right of the screen
+-b		adjust the video to the bottom of the screen
 ==============	================================================
 
 The following table describes fbff keybinding.  Most of these commands
