--- a/README
+++ b/README
@@ -2,28 +2,32 @@ FBFF
 ====
 
 fbff is a framebuffer/OSS media player using ffmpeg or libmpeg3.
-The following options can be specified when starting fbff:
 
-==============	================================================
-OPTION		DESCRIPTION
-==============	================================================
--z x		zoom the screen using ffmpeg
--m x		magnify the screen by repeating pixels
--j x		jump every x video frames; for slow machines
--f		start full screen
--v x		select video stream; '-' disables video
--a x		select audio stream; '-' disables audio
--t		use time based seeking; only if the default does't work
--s		don't rely on video framerate; always synchronize
--r		adjust the video to the right of the screen
--b		adjust the video to the bottom of the screen
-==============	================================================
+USAGE
+=====
+
+To start it simply run:
+
+  $ fbff file.sth
+
+When playing video files, audio and video may get out of sync.  So I
+suggest using this by default:
+
+  $ fbff -u -s file.sth
+
+And if that results in choppy playback, use:
+
+  $ fbff -u -s100 file.sth
+
+This means record A/V diff after the first few video frames (-u)
+and synchronize each 100 video frames (-s100).  This should work for
+most files.
 
 The following table describes fbff keybinding.  Most of these commands
 accept a numerical prefix.  The variable avdiff is used to synchronize
-audioa and video streams.  The synchronization is done after the 's'
-key or the pause and seek commands.  '-', '+', and 'a' keys can be used
-to change the value of avdiff as explained below.
+audio and video streams.  The synchronization is done after the 's' key
+or the pause and seek commands.  '-', '+', and 'a' keys can be used to
+change the value of avdiff as explained below.
 
 ==============	================================================
 KEY		ACTION
@@ -39,4 +43,25 @@ s		synchronize audio/video with A-V equal to avdiff
 +		set avdiff to +arg
 a		set avdiff to current playback A-V diff
 c		set synchronization steps
+==============	================================================
+
+OPTIONS AND KEYS
+================
+
+The following options can be specified when starting fbff:
+
+==============	================================================
+OPTION		DESCRIPTION
+==============	================================================
+-z x		zoom the screen using ffmpeg
+-m x		magnify the screen by repeating pixels
+-j x		jump every x video frames; for slow machines
+-f		start full screen
+-v x		select video stream; '-' disables video
+-a x		select audio stream; '-' disables audio
+-t		use time based seeking; only if the default does't work
+-s		don't rely on video framerate; always synchronize
+-u		record avdiff after the first few frames of video
+-r		adjust the video to the right of the screen
+-b		adjust the video to the bottom of the screen
 ==============	================================================
