--- a/README
+++ b/README
@@ -57,15 +57,18 @@ The following options can be specified when starting fbff:
 ==============	================================================
 OPTION		DESCRIPTION
 ==============	================================================
--z x		zoom the video using ffmpeg
+-z x		specify ffmpeg video zoom
 -m x		magnify the video by duplicating pixels
 -j x		jump every x video frames; for slow machines
 -f		start full screen
 -v x		select video stream; '-' disables video
 -a x		select audio stream; '-' disables audio
 -t		use time based seeking; only if the default doesn't work
--s		don't rely on video framerate; always synchronize
+-s		don't rely on video frame-rate; always synchronize
 -u		record avdiff after the first few frames of video
+-t path		the file containing the subtitles
+-x x		adjust video position horizontally
+-y x		adjust video position vertically
 -r		adjust the video to the right of the screen
 -b		adjust the video to the bottom of the screen
 ==============	================================================
